add: Booking Detail Period Fragment &  Maps Activity

--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -44,6 +44,22 @@
                     android:id="@+id/fame2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"></FrameLayout>
+                <FrameLayout
+                    android:id="@+id/fame3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></FrameLayout>
+                <FrameLayout
+                    android:id="@+id/fame4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></FrameLayout>
+                <FrameLayout
+                    android:id="@+id/fame5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></FrameLayout>
+                <FrameLayout
+                    android:id="@+id/fame6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></FrameLayout>
             </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
