--- a/app/src/main/res/layout/fragment_booking_detail_image_title.xml
+++ b/app/src/main/res/layout/fragment_booking_detail_image_title.xml
@@ -123,6 +123,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="Name"
+            android:layout_marginVertical="20sp"
+            android:textColor="@color/black"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
