--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#003580</color>
+    <color name="lightgrey">#d9dbde</color>
     <color name="grey">#adafb3</color>
     <color name="title_color">#FFFFFF</color>
 </resources>
