--- a/app/src/main/res/layout/fragment_sub_booking_detail_address.xml
+++ b/app/src/main/res/layout/fragment_sub_booking_detail_address.xml
@@ -1,22 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubBookingDetailAddress"
-    >
+    tools:context=".SubBookingDetailAddress" >
+</fragment>
 
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-</FrameLayout>
-<!--<fragment-->
-<!--android:id="@+id/mapFragement"-->
-<!--android:layout_height="match_parent"-->
-<!--android:layout_width="match_parent"-->
-<!--android:name ="com.google.android.gms.maps.SupportMapFragment"-->
-<!--    >-->
-<!--</fragment>-->
