--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -13,15 +13,16 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/avtImgv"
-            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
             android:layout_width="100dp"
-            android:layout_gravity="center"
             android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:src="@drawable/default_avt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
             tools:layout_editor_absoluteY="503dp" />
 
         <TextView
