--- a/app/src/main/res/layout/fragment_sub_booking_detail_address.xml
+++ b/app/src/main/res/layout/fragment_sub_booking_detail_address.xml
@@ -35,18 +35,20 @@
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
-            android:layout_height="20sp"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:src="@drawable/baseline_location_on_24" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/baseline_location_on_24"/>
         <TextView
             android:id="@+id/addressTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="address is ...."
+            android:layout_alignBottom="@+id/imageView1"
+            android:layout_alignTop="@+id/imageView1"
+            android:layout_toRightOf="@+id/imageView1"
+            android:paddingLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="TextView"
             android:textSize="14sp"></TextView>
 
     </LinearLayout>
