update: position arrangement + build: navigation,

--- a/app/src/main/res/layout/fragment_sub_booking_detail_description.xml
+++ b/app/src/main/res/layout/fragment_sub_booking_detail_description.xml
@@ -50,16 +50,16 @@
                 android:layout_gravity="right|bottom"
                 android:background="@android:color/transparent"/>
         </com.ms.square.android.expandabletextview.ExpandableTextView>
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/FeedbackBtn"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:orientation="horizontal"
             >
 
             <TextView
-                android:id="@+id/img"
+                android:id="@+id/ratingTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -74,23 +74,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingLeft="10dp"
+                android:layout_toRightOf="@+id/ratingTv"
                 >
+
                 <TextView
                     android:id="@+id/EvaluateTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="Excelent"
-                    android:textSize="24sp"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/noFeedbackTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="193 " />
+                    android:text="" />
             </LinearLayout>
+            <ImageView
+                android:layout_width="36sp"
+                android:layout_height="36sp"
+                android:layout_alignParentRight="true"
+                android:gravity="center_vertical"
+                android:src="@drawable/baseline_keyboard_arrow_right_24">
 
-        </LinearLayout>
+            </ImageView>
+        </RelativeLayout >
     </LinearLayout>
 </FrameLayout>
