--- a/app/src/main/res/layout/fragment_booking_detail_image_title.xml
+++ b/app/src/main/res/layout/fragment_booking_detail_image_title.xml
@@ -104,7 +104,7 @@
                     android:id="@+id/noImageET"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:text="+"
                     android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                     app:layout_constraintEnd_toEndOf="@+id/imageView5"
