--- a/app/src/main/res/layout/fragment_sub_booking_detail_period_cost.xml
+++ b/app/src/main/res/layout/fragment_sub_booking_detail_period_cost.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     tools:context=".SubBookingDetailPeriod"
+    android:paddingVertical="10dp"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:gravity="center"
             android:background="@color/white"
             android:orientation="vertical"
-            android:layout_marginVertical="10sp"
+
             >
 
             <LinearLayout
@@ -28,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:layout_marginHorizontal="25sp"
+                android:layout_marginHorizontal="10sp"
                 android:layout_marginVertical="20sp"
 
                 >
@@ -94,7 +95,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:orientation="vertical"
-                android:layout_marginHorizontal="25sp"
+                android:layout_marginHorizontal="10sp"
                 android:layout_marginBottom="15sp"
                 >
 
