--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,10 +103,11 @@
                         android:id="@+id/searchBtn"
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
+                        android:layout_marginHorizontal="5dp"
                         android:backgroundTint="#009fe3"
                         android:text="Search"
-                        android:layout_marginHorizontal="5dp"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        app:cornerRadius="5dp" />
 
                 </LinearLayout>
 
