--- a/app/src/main/res/layout/hotel_list_item.xml
+++ b/app/src/main/res/layout/hotel_list_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="wrap_content"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
+    android:minHeight="320dp"
     android:layout_marginHorizontal="15dp"
     android:background="@drawable/bg_rounded_corners"
     android:paddingBottom="5dp"
@@ -26,6 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_marginEnd="5dp"
         android:textStyle="bold"
         android:text="Somerset Ho Chi Minh City"
