--- a/app/src/main/res/layout/custom_saved_item2.xml
+++ b/app/src/main/res/layout/custom_saved_item2.xml
@@ -40,11 +40,12 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="19dp"
-        android:layout_height="22dp"
+        android:layout_width="46dp"
+        android:layout_height="54dp"
         android:layout_marginEnd="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoTV"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/infoTV"
+        app:layout_constraintTop_toTopOf="@+id/nameTV"
         app:srcCompat="@drawable/baseline_more_horiz_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
