--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightgrey">#d9dbde</color>
     <color name="grey">#adafb3</color>
     <color name="title_color">#FFFFFF</color>
+    <color name="green">#33cc33</color>
 </resources>
