--- a/app/src/main/res/layout/fragment_sub_booking_detail_feed_back.xml
+++ b/app/src/main/res/layout/fragment_sub_booking_detail_feed_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubBookingDetailFeedBack"
+    tools:context=".BookingDetailFeedBack"
     android:padding="10dp">
 
 
@@ -12,7 +12,78 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingVertical="5dp">
+        <TextView
+            android:id="@+id/cleaness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cleanliness"
+            android:textStyle="bold" />
 
+        <ProgressBar
+            android:id="@+id/cleanBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@android:color/white"
+            android:progressDrawable="@drawable/progress_bg"
+            android:max="100"
+
+            />
+
+        <TextView
+            android:id="@+id/comfort"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Comfort"
+            android:textStyle="bold" />
+        <ProgressBar
+            android:id="@+id/comfortBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@android:color/white"
+            android:progressDrawable="@drawable/progress_bg"
+            android:max="100"
+
+            />
+        <TextView
+            android:id="@+id/services"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Services"
+            android:textStyle="bold" />
+        <ProgressBar
+            android:id="@+id/servicesBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@android:color/white"
+            android:progressDrawable="@drawable/progress_bg"
+            android:max="100"
+
+            />
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Location"
+            android:textStyle="bold" />
+        <ProgressBar
+            android:id="@+id/locationBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@android:color/white"
+            android:progressDrawable="@drawable/progress_bg"
+            android:max="100"
+            />
+
+    </LinearLayout>
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -24,7 +95,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
 
             />
     </LinearLayout>
