fix: fix merge conflict

--- a/app/src/main/res/drawable/custom_button_booking_select.xml
+++ b/app/src/main/res/drawable/custom_button_booking_select.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke
-        android:color="#003b94"
-        android:width="1dp" />
-    <solid android:color="#bdd7fc" />
-    <corners android:radius="20dp" />
+    <stroke android:color="@color/primary" android:width="1dp"></stroke>
+    <solid android:color="#bdd7fc"></solid>
+    <corners android:radius="20dp"></corners>
 </shape>
