--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -6,14 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BookingFragment">
-
         <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fafafa"
         >
-
-
         <android.widget.Button
             android:id="@+id/activeBtn"
             android:layout_width="80dp"
@@ -22,10 +19,10 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/custom_button_booking"
             android:text="Active"
+            android:textColor="@color/black"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <android.widget.Button
             android:id="@+id/doneBtn"
             android:layout_width="80dp"
@@ -33,13 +30,14 @@
             android:layout_marginStart="15dp"
             android:background="@drawable/custom_button_booking"
             android:text="Done"
+            android:textColor="@color/black"
             android:textAllCaps="false"
             app:layout_constraintStart_toEndOf="@+id/activeBtn"
             app:layout_constraintTop_toTopOf="@+id/activeBtn" />
-
         <android.widget.Button
             android:id="@+id/cancelBtn"
             android:layout_width="90dp"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:background="@drawable/custom_button_booking"
